--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-Django~=1.11
-django-crispy-forms
+asgiref==3.2.3
+Django==3.0.2
+django-crispy-forms==1.8.1
+gunicorn==20.0.4
 hashids==1.1.0
-gunicorn
-whitenoise
+pytz==2019.3
+sqlparse==0.3.0
+whitenoise==5.0.1
