--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
 asgiref==3.2.3
-Django==3.0.7
+attrs==19.3.0
+Django==3.0.3
 django-crispy-forms==1.8.1
 gunicorn==20.0.4
 hashids==1.1.0
+importlib-metadata==1.5.0
+more-itertools==8.2.0
+packaging==20.1
+pluggy==0.13.1
+py==1.8.1
+pyparsing==2.4.6
+pytest==5.3.5
 pytz==2019.3
+six==1.14.0
 sqlparse==0.3.0
+wcwidth==0.1.8
 whitenoise==5.0.1
+zipp==2.2.0
+
