--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,21 @@
-asgiref==3.2.10
-attrs==19.3.0
-Django==3.1.6
-django-crispy-forms==1.8.1
+asgiref==3.3.1
+attrs==20.3.0
+Django==3.1.7
+django-crispy-forms==1.11.1
 gunicorn==20.0.4
-hashids==1.1.0
-importlib-metadata==1.5.0
-more-itertools==8.2.0
-packaging==20.1
+hashids==1.3.1
+importlib-metadata==3.7.3
+iniconfig==1.1.1
+more-itertools==8.7.0
+packaging==20.9
 pluggy==0.13.1
-py==1.8.1
-pyparsing==2.4.6
-pytest==5.3.5
-pytz==2019.3
-six==1.14.0
-sqlparse==0.3.0
-wcwidth==0.1.8
-whitenoise==5.0.1
-zipp==2.2.0
-
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.2
+pytz==2021.1
+six==1.15.0
+sqlparse==0.4.1
+toml==0.10.2
+wcwidth==0.2.5
+whitenoise==5.2.0
+zipp==3.4.1
